add AboutUs and Debut Why Choose

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <img class="hero-img" src="./public/images/hero-img.png" alt="">
         </div>
     </header>
-    <!-- <section class="About-Us">
+    <section class="About-Us">
         <div class="content-aboutus">
             <p>ABOUT US</p>
             <h1>LEARN MORE <span>ABOUT US</span></h1>
@@ -89,7 +89,7 @@
           <div class="whychoose2"></div>
           <div class="whychoose3"></div>
           <div class="whychoose4"></div>
-    </section> -->
+    </section>
 
     <script src="./public/js/app.js"></script>
 </body>
