--- a/index.html
+++ b/index.html
@@ -86,9 +86,22 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Duis aute irure dolor in reprehenderit Asperiores dolores sed et. Tenetur quia eos. Autem tempore quibusdam vel necessitatibus optio ad corporis.</p>
             <button>Learn More <i class="bi bi-chevron-right"></i></button>
           </div>
-          <div class="whychoose2"></div>
-          <div class="whychoose3"></div>
-          <div class="whychoose4"></div>
+          <div class="whychoose2">
+            <i class="bi bi-calendar4-range"></i>
+            <h2>Corporis voluptates officia eiusmod</h2>
+            <p>Consequuntur sunt aut quasi enim aliquam quae harum pariatur laboris nisi ut aliquip</p>
+
+          </div>
+          <div class="whychoose3">
+            <i class="bi bi-calendar4-range"></i>
+            <h2>Ullamco laboris ladore lore pan</h2>
+            <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt</p>
+          </div>
+          <div class="whychoose4">
+            <i class="bi bi-calendar4-range"></i>
+            <h2>Labore consequatur incidid dolore</h2>
+            <p>Aut suscipit aut cum nemo deleniti aut omnis. Doloribus ut maiores omnis facere</p>
+          </div>
     </section>
 
     <script src="./public/js/app.js"></script>
