--- a/index.html
+++ b/index.html
@@ -102,7 +102,38 @@
             <h2>Labore consequatur incidid dolore</h2>
             <p>Aut suscipit aut cum nemo deleniti aut omnis. Doloribus ut maiores omnis facere</p>
           </div>
-    </section>
+        </section>
+        <section class="Numbers">
+           
+            <div class="opacity">
+                <div class="static">
+                    <h1>232</h1>
+                    <p>Clients</p>
+                </div>
+                <div class="static"> 
+                    <h1>521</h1>
+                    <p>Projects</p>
+                </div>
+                <div class="static">
+                    <h1>1453</h1>
+                    <p>Hours Of Support</p>
+                </div>
+                <div class="static">
+                    <h1>32</h1>
+                    <p>Workers</p>
+                </div>
+            </div>
+        </section>
+        <section class="Menu">
+            <div class="content-menu">
+                <p>OUR MENU</p>
+                <h1>CHECK OUR <span>YUMMY MENU</span></h1>
+                <div class="Food">
+
+                </div>
+            </div>
+        </section>
+    
 
     <script src="./public/js/app.js"></script>
 </body>
